--- a/src/main/resources/templates/student/addStudent.html
+++ b/src/main/resources/templates/student/addStudent.html
@@ -203,12 +203,12 @@
 </div>
 <div class="container">
     <form action="/student/save" data-th-object="${student}" method="post">
-<!--        <div class="form-group">-->
-<!--            <label class="col-sm-3 control-label" data-th-for="${id}">Index</label>-->
-<!--            <div class="col-sm-9">-->
-<!--                <input type="text" readonly data-th-field="*{id}" id="id" placeholder="IndeX" class="form-control" autofocus>-->
-<!--            </div>-->
-<!--        </div>-->
+        <!--        <div class="form-group">-->
+        <!--            <label class="col-sm-3 control-label" data-th-for="${id}">Index</label>-->
+        <!--            <div class="col-sm-9">-->
+        <!--                <input type="text" readonly data-th-field="*{id}" id="id" placeholder="IndeX" class="form-control" autofocus>-->
+        <!--            </div>-->
+        <!--        </div>-->
         <div class="form-group">
             <label class="col-sm-2 control-label" data-th-for="${regNo}">Registration ID</label>
             <div class="col-sm-5">
@@ -230,7 +230,7 @@
         <div class="form-group">
             <label class="col-sm-3 control-label">Gender</label>
             <div class="col-sm-9">
-                <select id="gender" class="form-control" data-th-field="*{gender}" >
+                <select id="gender" class="form-control" data-th-field="*{gender}">
                     <option value="male">Male</option>
                     <option value="female">Female</option>
                 </select>
@@ -258,10 +258,12 @@
         <div class="form-group">
             <label class="col-sm-3 control-label">School</label>
             <div class="col-sm-9">
-                <select id="school" class="form-control" data-th-field="*{school}" >
-                    <option value="D.S">D.S</option>
-                    <option value="Ananda">Ananada</option>
-                    <option value="Nalanda">Nalanda</option>
+                <select id="school" class="form-control" data-th-field="*{school}">
+                    <option value="" selected disabled>Please select</option>
+                    <option data-th-each="school : ${schools}"
+                            data-th-text="${school.name}"
+                            data-th-value="${school.id}">Ananada
+                    </option>
                 </select>
             </div>
         </div>
