school.html was modified

--- a/src/main/resources/templates/school/school.html
+++ b/src/main/resources/templates/school/school.html
@@ -11,12 +11,12 @@
     <div class="row text-center formManagement border-info">
         <div class="col">
             <a class="btn btn-success" href="/school/add"><i class="fa fa-user-plus"></i>
-                &nbsp; New Author</a>
+                &nbsp; New Student</a>
         </div>
         <div class="col">
             <h4 class="text-info text-center">
                 <strong>
-                    Author Management
+                    Student Management
                 </strong>
             </h4>
         </div>
