--- a/src/main/resources/templates/school/school.html
+++ b/src/main/resources/templates/school/school.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col">
             <!-- <a href="/school/workingPlace" id="searchShow" class="btn btn-primary">
-                 <i class="fa fa-user " style="font-size: 20px"></i>&nbsp;Add&nbsp;
+                 <i class="fa fa-user " style="font-size: 20pKx"></i>&nbsp;Add&nbsp;
                  <i class="fas fa-store-alt" style="font-size: 20px"></i>
                  &nbsp;
              </a>-->
