--- a/src/main/resources/templates/school/school-detail.html
+++ b/src/main/resources/templates/school/school-detail.html
@@ -3,7 +3,7 @@
 <!--Styles, meta data, and title are included-->
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Success Student Management</title>
+    <title>School Management</title>
 </head>
 <body>
 <!--Nav bar is included-->
@@ -17,42 +17,31 @@
         <h1>School Details</h1>
     </div>
     <div class="col-4">
-        <a href="/school/new">
-            <button class="btn btn-primary" align="center">Add new School</button>
+        <a href="/school/add">
+            <button class="btn btn-primary" align="center">New School</button>
         </a>
     </div>
 </div>
-<!--Discount detail-->
-<div class=" row container-fluid" data-th-fragment="schoolDetail">
+
+<div class="row container-fluid">
     <div class="col-sm-3"></div>
     <div class="col-sm-8">
         <div class="form-group">
-            <label data-th-for="${id}" class="col-sm-3 control-label">Index</label>
+            <label data-th-for="${id}" class="col-sm-3 control-label">School ID</label>
             <div class="col-sm-6">
-                <p type="text" id="id" class="form-control" data-th-text="*{schoolDetail.id}">
+                <p type="text" id="ID" class="form-control" data-th-text="*{schoolDetail.id}">
             </div>
         </div>
         <div class="form-group">
-            <label data-th-for="${schoolId}" class="col-sm-3 control-label">School ID</label>
+            <label data-th-for="${school}" class="col-sm-3 control-label">School name</label>
             <div class="col-sm-6">
-                <p type="text" id="schoolId" class="form-control" data-th-text="*{schoolDetail.schoolId}">
+                <p type="text" id="school" class="form-control" data-th-text="*{schoolDetail.school}">
             </div>
         </div>
-        <div class="form-group">
-            <label data-th-for="${schoolName}" class="col-sm-3 control-label">School Name</label>
-            <div class="col-sm-6">
-                <p type="text" id="schoolName" class="form-control" data-th-text="*{schooltDetail.schoolName}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label data-th-for="${district}" class="col-sm-3 control-label">Dictrict</label>
-            <div class="col-sm-6">
-                <p type="text" id="district" class="form-control" data-th-text="*{schooltDetail.district}">
-            </div>
-        </div>
+
         <div class="row container-fluid">
             <div class="col-sm-2 col-sm-offset-2">
-                <a href="/discount">
+                <a href="/school">
                     <button type="link"  class="btn btn-danger btn-block" >Back</button>
                 </a>
             </div>
@@ -61,9 +50,6 @@
     </div>
     <div class="col-sm-1"></div>
 </div>
-<!--footer is included-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
-<!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+
 </body>
 </html>
