Student issue was resolve.

--- a/src/main/resources/templates/student/addStudent.html
+++ b/src/main/resources/templates/student/addStudent.html
@@ -230,10 +230,12 @@
         <div class="form-group">
             <label class="col-sm-3 control-label">Gender</label>
             <div class="col-sm-9">
-                <select id="gender" class="form-control" data-th-field="*{gender}">
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                </select>
+                <select id="gender" data-th-field="*{gender}" class="form-control" tabindex="7" readonly="" required >
+                    <option value="" >Please select</option >
+                    <option data-th-each="genders : ${gender}"
+                            data-th-text="${genders.gender}"
+                            data-th-value="${genders}" ></option >
+                </select >
             </div>
         </div>
         <div class="form-group">
