--- a/src/main/resources/templates/subject/addSubject.html
+++ b/src/main/resources/templates/subject/addSubject.html
@@ -103,12 +103,12 @@
 
 <div class="container">
     <form action="/subject/save" data-th-object="${subject}" method="post">
-<!--        <div class="form-group">-->
-<!--            <label class="col-sm-3 control-label" data-th-for="${id}">Index</label>-->
-<!--            <div class="col-sm-9">-->
-<!--                <input type="text" data-th-field="*{id}" id="id" placeholder="Index" class="form-control" autofocus>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="form-group" data-th-if="${addStatus==false}">
+            <label class="col-sm-3 control-label" data-th-for="${id}">Index</label>
+            <div class="col-sm-9">
+                <input type="text" data-th-field="*{id}" id="id" placeholder="Index" class="form-control" autofocus>
+            </div>
+        </div>
         <div class="form-group">
             <label class="col-sm-2 control-label" data-th-for="${name}">Subject Name</label>
             <div class="col-sm-5">
