--- a/src/main/resources/templates/teacher/addTeacher.html
+++ b/src/main/resources/templates/teacher/addTeacher.html
@@ -86,8 +86,12 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" data-th-for="${subject}">Subject</label>
             <div class="col-sm-4">
-                <input type="text" id="subject" class="form-control" data-th-field="*{subject}">
-            </div>
+              <select id="subject" data-th-field="*{subject}" class="form-control" tabindex="7" readonly="" required >
+                <option value="" >Please select</option >
+                <option data-th-each="subject : ${subjects}"
+                        data-th-text="${subject.name}"
+                        data-th-value="${subject.id}" ></option >
+              </select >   </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label" data-th-for="${fee}">Tution Fee</label>
@@ -111,8 +115,6 @@
         </div>
     </form>
 </div>
-</body>
-</html>
 <!--footer is included-->
 <footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script is included-->
