--- a/src/main/resources/templates/teacher/addTeacher.html
+++ b/src/main/resources/templates/teacher/addTeacher.html
@@ -50,7 +50,7 @@
         <div class="form-group">
             <label class="col-sm-3 control-label">Gender</label>
             <div class="col-sm-9">
-              <select id="gender" data-th-field="*{gender}" class="form-control" tabindex="7" readonly="" required >
+              <select id="gender" data-th-field="*{gender}" class="form-control" tabindex="7" required >
                 <option value="" >Please select</option >
                 <option data-th-each="genders : ${gender}"
                         data-th-text="${genders.gender}"
