Batch add was fixed

--- a/src/main/resources/templates/batch/addBatch.html
+++ b/src/main/resources/templates/batch/addBatch.html
@@ -138,12 +138,10 @@
             <label class="col-sm-1 control-label" data-th-for="${grade}">Grade</label>
             <div class="col-sm-5">
                 <select id="grade" class="form-control" data-th-field="*{grade}">
-                    <option value="g6">Grade 6</option>
-                    <option value="g7">Grade 7</option>
-                    <option value="g8">Grade 8</option>
-                    <option value="g9">Grade 9</option>
-                    <option value="g10">Grade 10</option>
-                    <option value="g11">Grade 11</option>
+                    <option value="">Select the Grade</option>
+                    <option data-th-each="grade : ${grades}"
+                            data-th-text="${grade.grade}"
+                            data-th-value="${grade}"></option>
                 </select>
             </div>
         </div>
@@ -153,7 +151,6 @@
                 <select id="teacherName" class="form-control" data-th-field="*{teacherName}">
                     <option value="">Select the Teacher</option>
                     <option data-th-each="teachers : ${teacher}"
-                            data-th-selected="$teachers==teacher.firstName?'selected':'unselected'}"
                             data-th-text="${teachers.teacher}"
                             data-th-value="${teachers}"></option>
                 </select>
@@ -165,7 +162,6 @@
                 <select id="subjectName" class="form-control" data-th-field="*{subjectName}">
                     <option value="">Select the Subject</option>
                     <option data-th-each="subjects : ${subject}"
-                            data-th-selected="subjects==subject.name?'selected':'unselected'}"
                             data-th-text="${subjects.subject}"
                             data-th-value="${subjects}"></option>
                 </select>
