--- a/src/main/resources/templates/batch/addBatch.html
+++ b/src/main/resources/templates/batch/addBatch.html
@@ -151,7 +151,7 @@
                 <select id="teacherName" class="form-control" data-th-field="*{teacher}">
                     <option value="">Select the Teacher</option>
                     <option data-th-each="teacher : ${teachers}"
-                            data-th-text="${teacher.name}"
+                            data-th-text="${teacher.firstName}"
                             data-th-value="${teacher.id}"></option>
                 </select>
             </div>
