--- a/src/main/resources/templates/batch/batch.html
+++ b/src/main/resources/templates/batch/batch.html
@@ -43,8 +43,8 @@
                 <td data-th-text="${batch.classReferance}"></td>
                 <td data-th-text="${batch.year}"></td>
                 <td data-th-text="${batch.grade}"></td>
-                <td data-th-text="${batch.name}"></td>
-                <td data-th-text="${batch.firstName}"></td>
+                <td data-th-text="${batch.subject.name}"></td>
+                <td data-th-text="${batch.teacher.firstName}"></td>
 
 
                 <td>
